--- a/setup.cfg
+++ b/setup.cfg
@@ -1,24 +1,31 @@
-[bdist_wheel]
-universal=1
+[bumpversion]
+current_version = 0.0.14
+commit = True
+tag = True
 
-[metadata]
-license_file = LICENSE.txt
+[bumpversion:file:setup.py]
+search = version="{current_version}"
+replace = version="{new_version}"
+
+[bumpversion:file:aicsshparam/__init__.py]
+search = {current_version}
+replace = {new_version}
+
+[bdist_wheel]
+universal = 1
 
 [aliases]
-test=pytest
+test = pytest
 
 [tool:pytest]
-addopts = --junitxml=build/test_report.xml -v
-norecursedirs = .egg* build dist venv .gradle aicsshparam.egg_info/*
+collect_ignore = ['setup.py']
 
 [flake8]
-max-line-length = 130
-
-
-[coverage:html]
-directory = build/coverage_html
-title = Test coverage report for aicsshparam
-
-[coverage:xml]
-output = build/coverage.xml
-
+exclude =
+	docs/
+ignore =
+	E203
+	E402
+	W291
+	W503
+max-line-length = 88
