--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: [3.9, 3.10, 3.11]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -37,7 +37,9 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8
+        python-version: 3.9
+        python-version: 3.10
+        python-version: 3.11
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
@@ -60,6 +62,8 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.9
+        python-version: 3.10
+        python-version: 3.11
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
