--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.9, 3.10, 3.11]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -34,7 +34,9 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8
+        python-version: 3.9
+        python-version: 3.10
+        python-version: 3.11
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
