--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+aicsshparam/tests/all/*
 
 # Translations
 *.mo
@@ -110,3 +111,5 @@ ENV/
 
 # VSCode
 .vscode
+
+# Tests
