--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -16,6 +16,10 @@ jobs:
       uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c
       with:
         python-version: 3.9
+        python-version: 3.10
+        python-version: 3.11
+        python-version: 3.12
+        python-version: 3.13
     - name: Install Dependencies
       run: |
         pip install --upgrade pip
