--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist = True
-envlist = py39, py310, py311, lint
+envlist = py39, py310, py311, py312, py313, lint
 
 [testenv:lint]
 deps =
