--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -34,11 +34,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c
       with:
-        python-version: 3.9
-        python-version: 3.10
-        python-version: 3.11
-        python-version: 3.12
-        python-version: 3.13
+        python-version: ["3.9", "3.10", "3.11","3.12","3.13"]
+        # python-version: 3.9
+        # python-version: 3.10
+        # python-version: 3.11
+        # python-version: 3.12
+        # python-version: 3.13
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
