--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -9,31 +9,31 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.3.1
-      with:
-        persist-credentials: false
-    - name: Set up Python
-      uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c
-      with:
-        python-version: ["3.9", "3.10", "3.11","3.12","3.13"]
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
-        # python-version: 3.10
-        # python-version: 3.11
-        # python-version: 3.12
-        # python-version: 3.13
-    - name: Install Dependencies
-      run: |
-        pip install --upgrade pip
-        pip install .[dev]
-    - name: Generate Docs
-      run: |
-        make gen-docs
-        touch docs/_build/html/.nojekyll
-    - name: Publish Docs
-      uses: JamesIves/github-pages-deploy-action@3.7.1
-      with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BASE_BRANCH: main # The branch the action should deploy from.
-        BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: docs/_build/html/ # The folder the action should deploy.
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+          cache: 'pip'
 
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .[dev]
+
+      - name: Generate Docs
+        run: |
+          make gen-docs
+          touch docs/_build/html/.nojekyll
+
+      - name: Publish Docs
+        uses: JamesIves/github-pages-deploy-action@v4.4.3
+        with:
+          branch: gh-pages
+          folder: docs/_build/html/
+          token: ${{ secrets.GITHUB_TOKEN }}
+          clean: true
