--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -5,9 +5,7 @@ on:
     branches:
       - main
   schedule:
-    # <minute [0,59]> <hour [0,23]> <day of the month [1,31]> <month of the year [1,12]> <day of the week [0,6]>
-    # https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html#tag_20_25_07
-    # Run every Monday at 18:00:00 UTC (Monday at 10:00:00 PST)
+    # Run on the 1st day of every month at 18:00 UTC
     - cron: '0 18 1 * *'
 
 jobs:
@@ -21,20 +19,41 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      # Set up Python using setup-python
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
+      # **Set up Conda and install dependencies only for Python 3.13**
+      - name: Set up Conda for Python 3.13
+        if: matrix.python-version == '3.13'
+        uses: goanpeca/setup-miniconda@v3
+        with:
+          python-version: 3.13
+          auto-update-conda: true
+          activate-environment: build-env
+          environment-file: environment.yml
+          channels: conda-forge
+
+      - name: Install Build Dependencies for Python 3.13
+        if: matrix.python-version == '3.13'
+        run: |
+          conda install -c conda-forge fftw openblas cmake pkg-config
+          conda deactivate  # Deactivate if necessary
+
+      # Install Python dependencies
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install .[test]
 
+      # Run Pytest with coverage
       - name: Test with pytest
         run: |
           pytest --cov-report xml --cov=aicsshparam aicsshparam/tests/
 
+      # Upload Code Coverage
       - name: Upload Code Coverage
         uses: codecov/codecov-action@v3
 
@@ -51,6 +70,23 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
+      # **Set up Conda and install dependencies only for Python 3.13**
+      - name: Set up Conda for Python 3.13
+        if: matrix.python-version == '3.13'
+        uses: conda-incubator/setup-miniconda@v3
+        with:
+          python-version: 3.13
+          auto-update-conda: true
+          activate-environment: build-env
+          environment-file: environment.yml
+          channels: conda-forge
+
+      - name: Install Build Dependencies for Python 3.13
+        if: matrix.python-version == '3.13'
+        run: |
+          conda install -c conda-forge fftw openblas cmake pkg-config
+          conda deactivate  # Deactivate if necessary
 
       - name: Install Dependencies
         run: |
