--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -1,7 +1,6 @@
 name: Test and Lint
 
 on: pull_request
-  
 
 jobs:
   test:
@@ -15,11 +14,29 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      # Set up Python using setup-python
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
+
+      # **Set up Conda and install dependencies only for Python 3.13**
+      - name: Set up Conda for Python 3.13
+        if: matrix.python-version == '3.13'
+        uses: goanpeca/setup-miniconda@v3
+        with:
+          python-version: 3.13
+          auto-update-conda: true
+          activate-environment: build-env
+          environment-file: environment.yml
+          channels: conda-forge
+
+      - name: Install Build Dependencies for Python 3.13
+        if: matrix.python-version == '3.13'
+        run: |
+          conda install -c conda-forge fftw openblas cmake pkg-config
+          conda deactivate  # Deactivate if necessary
 
       - name: Install Dependencies
         run: |
@@ -50,6 +67,23 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
+
+      # **Set up Conda and install dependencies only for Python 3.13**
+      - name: Set up Conda for Python 3.13
+        if: matrix.python-version == '3.13'
+        uses: conda-incubator/setup-miniconda@v3
+        with:
+          python-version: 3.13
+          auto-update-conda: true
+          activate-environment: build-env
+          environment-file: environment.yml
+          channels: conda-forge
+
+      - name: Install Build Dependencies for Python 3.13
+        if: matrix.python-version == '3.13'
+        run: |
+          conda install -c conda-forge fftw openblas cmake pkg-config
+          conda deactivate  # Deactivate if necessary
 
       - name: Install Dependencies
         run: |
