--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -28,8 +28,8 @@ jobs:
         with:
           python-version: 3.13
           auto-update-conda: true
-          activate-environment: build-env
-          environment-file: environment.yml
+          # activate-environment: build-env
+          # environment-file: environment.yml
           channels: conda-forge
 
       - name: Install Build Dependencies for Python 3.13
@@ -75,8 +75,8 @@ jobs:
         with:
           python-version: 3.13
           auto-update-conda: true
-          activate-environment: build-env
-          environment-file: environment.yml
+          # activate-environment: build-env
+          # environment-file: environment.yml
           channels: conda-forge
 
       - name: Install Build Dependencies for Python 3.13
