--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -36,7 +36,7 @@ jobs:
         if: matrix.python-version == '3.13'
         run: |
           conda install -c conda-forge fftw openblas cmake pkg-config
-          conda deactivate  # Deactivate if necessary
+        #  conda deactivate  # Deactivate if necessary
 
       - name: Install Dependencies
         run: |
@@ -83,7 +83,7 @@ jobs:
         if: matrix.python-version == '3.13'
         run: |
           conda install -c conda-forge fftw openblas cmake pkg-config
-          conda deactivate  # Deactivate if necessary
+        #  conda deactivate  # Deactivate if necessary
 
       - name: Install Dependencies
         run: |
