--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -25,8 +25,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      # **Set up Conda and install dependencies only for Python 3.13**
-      - name: Set up Conda for Python 3.13
+      # **Set up Conda and install dependencies only for Python 3.13.2**
+      - name: Set up Conda for Python 3.13.2
         if: matrix.python-version == '3.13.2'
         uses: conda-incubator/setup-miniconda@v3
         with:
@@ -36,8 +36,8 @@ jobs:
           # environment-file: environment.yml
           channels: conda-forge
 
-      - name: Install Build Dependencies for Python 3.13
-        if: matrix.python-version == '3.13'
+      - name: Install Build Dependencies for Python 3.13.2
+        if: matrix.python-version == '3.13.2'
         run: |
           conda install -c conda-forge fftw openblas cmake pkg-config
         #  conda deactivate  # Deactivate if necessary
@@ -71,8 +71,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      # **Set up Conda and install dependencies only for Python 3.13**
-      - name: Set up Conda for Python 3.13
+      # **Set up Conda and install dependencies only for Python 3.13.2**
+      - name: Set up Conda for Python 3.13.2
         if: matrix.python-version == '3.13.2'
         uses: conda-incubator/setup-miniconda@v3
         with:
@@ -82,11 +82,11 @@ jobs:
           # environment-file: environment.yml
           channels: conda-forge
 
-      - name: Install Build Dependencies for Python 3.13
-        if: matrix.python-version == '3.13'
+      - name: Install Build Dependencies for Python 3.13.2
+        if: matrix.python-version == '3.13.2'
         run: |
           conda install -c conda-forge fftw openblas cmake pkg-config
-        #  conda deactivate  # Deactivate if necessary
+          conda deactivate  # Deactivate if necessary
 
       - name: Install Dependencies
         run: |
