--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13.2"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -21,19 +21,19 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
 
-      # **Set up Conda and install dependencies only for Python 3.13.2**
-      - name: Set up Conda for Python 3.13.2
-        if: matrix.python-version == '3.13.2'
-        uses: conda-incubator/setup-miniconda@v3
+      # **Set up Conda and install dependencies only for Python 3.13**
+      - name: Set up Conda for Python 3.13
+        if: matrix.python-version == '3.13'
+        uses: setup-conda@v1
         with:
-          python-version: 3.13.2
+          python-version: 3.13
           auto-update-conda: true
           # activate-environment: build-env
           # environment-file: environment.yml
           channels: conda-forge
 
-      - name: Install Build Dependencies for Python 3.13.2
-        if: matrix.python-version == '3.13.2'
+      - name: Install Build Dependencies for Python 3.13
+        if: matrix.python-version == '3.13'
         run: |
           conda install -c conda-forge fftw openblas cmake pkg-config
         #  conda deactivate  # Deactivate if necessary
@@ -56,7 +56,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13.2"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
       - name: Checkout Repository
@@ -68,19 +68,19 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
 
-      # **Set up Conda and install dependencies only for Python 3.13.2**
-      - name: Set up Conda for Python 3.13.2
-        if: matrix.python-version == '3.13.2'
-        uses: conda-incubator/setup-miniconda@v3
+      # **Set up Conda and install dependencies only for Python 3.13**
+      - name: Set up Conda for Python 3.13
+        if: matrix.python-version == '3.13'
+        uses: setup-conda@v1
         with:
-          python-version: 3.13.2
+          python-version: 3.13
           auto-update-conda: true
           # activate-environment: build-env
           # environment-file: environment.yml
           channels: conda-forge
 
-      - name: Install Build Dependencies for Python 3.13.2
-        if: matrix.python-version == '3.13.2'
+      - name: Install Build Dependencies for Python 3.13
+        if: matrix.python-version == '3.13'
         run: |
           conda install -c conda-forge fftw openblas cmake pkg-config
         #  conda deactivate  # Deactivate if necessary
