--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -30,11 +30,14 @@ jobs:
         if: matrix.python-version == '3.13'
         uses: s-weigand/setup-conda@v1
         with:
+          auto-activate-base: true
+          activate-environment: ""  
           python-version: 3.13
           auto-update-conda: true
           # activate-environment: build-env
           # environment-file: environment.yml
           channels: conda-forge
+
 
       - name: Install Build Dependencies for Python 3.13
         if: matrix.python-version == '3.13'
@@ -76,6 +79,8 @@ jobs:
         if: matrix.python-version == '3.13'
         uses: s-weigand/setup-conda@v1
         with:
+          auto-activate-base: true
+          activate-environment: ""  
           python-version: 3.13
           auto-update-conda: true
           # activate-environment: build-env
