--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -28,7 +28,7 @@ jobs:
       # **Set up Conda and install dependencies only for Python 3.13**
       - name: Set up Conda for Python 3.13
         if: matrix.python-version == '3.13'
-        uses: s-weigand/setup-conda@v1
+        uses: conda-incubator/setup-miniconda@v3
         with:
           auto-activate-base: true
           activate-environment: ""  
@@ -77,7 +77,7 @@ jobs:
       # **Set up Conda and install dependencies only for Python 3.13**
       - name: Set up Conda for Python 3.13
         if: matrix.python-version == '3.13'
-        uses: s-weigand/setup-conda@v1
+        uses: conda-incubator/setup-miniconda@v3
         with:
           auto-activate-base: true
           activate-environment: ""  
