--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -27,7 +27,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           auto-activate-base: true
-          activate-environment: ""  
+          activate-environment: true  
           python-version: 3.13
           auto-update-conda: true
           # activate-environment: build-env
@@ -77,7 +77,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           auto-activate-base: true
-          activate-environment: ""  
+          activate-environment: true  
           python-version: 3.13
           auto-update-conda: true
           # activate-environment: build-env
