removed tests for py313

--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -20,26 +20,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
-
-      # **Set up Conda and install dependencies only for Python 3.13**
-      - name: Set up Conda for Python 3.13
-        if: matrix.python-version == '3.13'
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          auto-activate-base: true
-          activate-environment: true  
-          python-version: 3.13
-          auto-update-conda: true
-          # activate-environment: build-env
-          # environment-file: environment.yml
-          channels: conda-forge
-
-
-      - name: Install Build Dependencies for Python 3.13
-        if: matrix.python-version == '3.13'
-        run: |
-          conda install -c conda-forge fftw openblas cmake pkg-config
-        #  conda deactivate  # Deactivate if necessary
 
       - name: Install Dependencies
         run: |
@@ -59,7 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - name: Checkout Repository
@@ -70,26 +50,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
-
-      # **Set up Conda and install dependencies only for Python 3.13**
-      - name: Set up Conda for Python 3.13
-        if: matrix.python-version == '3.13'
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          auto-activate-base: true
-          activate-environment: true  
-          python-version: 3.13
-          auto-update-conda: true
-          # activate-environment: build-env
-          # environment-file: environment.yml
-          channels: conda-forge
-
-
-      - name: Install Build Dependencies for Python 3.13
-        if: matrix.python-version == '3.13'
-        run: |
-          conda install -c conda-forge fftw openblas cmake pkg-config
-        #  conda deactivate  # Deactivate if necessary
 
       - name: Install Dependencies
         run: |
