--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -5,7 +5,9 @@ on:
     branches:
       - main
   schedule:
-    # Run on the 1st day of every month at 18:00 UTC
+    # <minute [0,59]> <hour [0,23]> <day of the month [1,31]> <month of the year [1,12]> <day of the week [0,6]>
+    # https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html#tag_20_25_07
+    # Run every Monday at 18:00:00 UTC (Monday at 10:00:00 PST)
     - cron: '0 18 1 * *'
 
 jobs:
@@ -13,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -24,26 +26,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
-      # **Set up Conda and install dependencies only for Python 3.13**
-      - name: Set up Conda for Python 3.13
-        if: matrix.python-version == '3.13'
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          auto-activate-base: true
-          activate-environment: true  
-          python-version: 3.13
-          auto-update-conda: true
-          # activate-environment: build-env
-          # environment-file: environment.yml
-          channels: conda-forge
-
-
-      - name: Install Build Dependencies for Python 3.13
-        if: matrix.python-version == '3.13'
-        run: |
-          conda install -c conda-forge fftw openblas cmake pkg-config
-        #  conda deactivate  # Deactivate if necessary
 
       # Install Python dependencies
       - name: Install Dependencies
@@ -64,7 +46,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v3
@@ -73,25 +55,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
-      # **Set up Conda and install dependencies only for Python 3.13**
-      - name: Set up Conda for Python 3.13
-        if: matrix.python-version == '3.13'
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          auto-activate-base: true
-          activate-environment: true  
-          python-version: 3.13
-          auto-update-conda: true
-          # activate-environment: build-env
-          # environment-file: environment.yml
-          channels: conda-forge
-
-      - name: Install Build Dependencies for Python 3.13
-        if: matrix.python-version == '3.13'
-        run: |
-          conda install -c conda-forge fftw openblas cmake pkg-config
-          conda deactivate  # Deactivate if necessary
 
       - name: Install Dependencies
         run: |
