--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = [
+    "setuptools>=42",
+    "wheel",
+    "bump2version>=0.5.3" 
+]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -92,3 +96,27 @@ all = [
 [tool.setuptools]
 include-package-data = true
 py-modules = []
+
+# # Configuration for bump2version
+# [tool.bumpversion]
+# current_version = "0.2.1"
+# commit = true
+# tag = true
+
+# [bumpversion:file:pyproject.toml]
+# search = version = "{current_version}"
+# replace = version = "{new_version}"
+
+# [[bumpversion.file]]
+# path = "aicsshparam/__init__.py"
+# search = "{current_version}"
+# replace = "{new_version}"
+
+# # Flake8 configuration
+# [tool.flake8]
+# exclude = ["docs/"]
+# ignore = ["E203", "E402", "W291", "W503"]
+# max-line-length = 88
+
+# [aliases]
+# test = "pytest"
