--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [bumpversion]
-current_version = 0.2.0
-commit = True
-tag = True
+current_version = 0.2.1
+commit = true
+tag = true
 
-[bumpversion:file:setup.py]
-search = version="{current_version}"
-replace = version="{new_version}"
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bumpversion:file:aicsshparam/__init__.py]
 search = {current_version}
@@ -18,7 +18,7 @@ universal = 1
 test = pytest
 
 [tool:pytest]
-collect_ignore = ['setup.py']
+collect_ignore = ['pyproject.toml']
 
 [flake8]
 exclude = 
