--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -22,8 +22,12 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools
           pip install .[dev]
+
+      - name: Verify m2r2 Installation
+        run: |
+          python -c "import m2r2"
 
       - name: Generate Docs
         run: |
