--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -17,17 +17,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
+          python-version: '3.9'
           cache: 'pip'
 
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip setuptools
+          python -m pip install --upgrade pip
           pip install .[dev]
-
-      - name: Verify m2r2 Installation
-        run: |
-          python -c "import m2r2"
 
       - name: Generate Docs
         run: |
