Modified toml and docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ dev = [
     "bump2version",
     "coverage",
     "ipython",
-    "m2r2",
+    "myst-parser",
     "sphinx",
     "furo",
     "tox",
@@ -82,7 +82,7 @@ all = [
     "bump2version",
     "coverage",
     "ipython",
-    "m2r2",
+    "myst-parser",
     "sphinx",
     "furo",
     "tox",
